rerun notebook, dave suggestions

--- a/3.evaluate_model/get_LOIO_probabilities.ipynb
+++ b/3.evaluate_model/get_LOIO_probabilities.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Libraries\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,7 +27,14 @@
     "\n",
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
-    "from train_utils import get_dataset, get_X_y_data"
+    "from train_utils import get_X_y_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load/Preview Labeled Data\n"
    ]
   },
   {
@@ -293,6 +307,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get LOIO probabilities\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -302,23 +323,8 @@
      "output_type": "stream",
      "text": [
       "Performing LOIO for feature type CP with parameters C: 1.0, l1_ratio: 0.30000000000000004\n",
-      "Leaving out image: LT0010_27/LT0010_27_173_83.tif; number of cells: 24, score: 0.7083333333333334\n",
-      "Leaving out image: LT0013_38/LT0013_38_42_75.tif; number of cells: 15, score: 0.6\n",
-      "Leaving out image: LT0013_38/LT0013_38_42_95.tif; number of cells: 22, score: 0.8636363636363636\n",
-      "Leaving out image: LT0017_19/LT0017_19_365_65.tif; number of cells: 9, score: 0.7777777777777778\n",
-      "Leaving out image: LT0019_06/LT0019_06_140_70.tif; number of cells: 29, score: 0.7586206896551724\n",
       "Performing LOIO for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 0.30000000000000004\n",
-      "Leaving out image: LT0010_27/LT0010_27_173_83.tif; number of cells: 24, score: 0.8333333333333334\n",
-      "Leaving out image: LT0013_38/LT0013_38_42_75.tif; number of cells: 15, score: 0.7333333333333333\n",
-      "Leaving out image: LT0013_38/LT0013_38_42_95.tif; number of cells: 22, score: 0.9090909090909091\n",
-      "Leaving out image: LT0017_19/LT0017_19_365_65.tif; number of cells: 9, score: 0.4444444444444444\n",
-      "Leaving out image: LT0019_06/LT0019_06_140_70.tif; number of cells: 29, score: 0.5862068965517241\n",
-      "Performing LOIO for feature type DP with parameters C: 1.0, l1_ratio: 1.0\n",
-      "Leaving out image: LT0010_27/LT0010_27_173_83.tif; number of cells: 24, score: 0.5833333333333334\n",
-      "Leaving out image: LT0013_38/LT0013_38_42_75.tif; number of cells: 15, score: 0.7333333333333333\n",
-      "Leaving out image: LT0013_38/LT0013_38_42_95.tif; number of cells: 22, score: 0.45454545454545453\n",
-      "Leaving out image: LT0017_19/LT0017_19_365_65.tif; number of cells: 9, score: 0.4444444444444444\n",
-      "Leaving out image: LT0019_06/LT0019_06_140_70.tif; number of cells: 29, score: 0.4827586206896552\n"
+      "Performing LOIO for feature type DP with parameters C: 1.0, l1_ratio: 1.0\n"
      ]
     }
    ],
@@ -360,6 +366,8 @@
     "\n",
     "        # capture convergence warning from sklearn\n",
     "        # this warning does not affect the model but takes up lots of space in the output\n",
+    "        # this warning must be caught with parallel_backend because the logistic regression model uses parallel_backend\n",
+    "        # (n_jobs=-1 means use all processors)\n",
     "        with parallel_backend(\"multiprocessing\"):\n",
     "            with warnings.catch_warnings():\n",
     "                warnings.filterwarnings(\n",
@@ -398,17 +406,14 @@
     "        test_cells_wide_data = pd.concat([metadata_dataframe, probas_dataframe], axis=1)\n",
     "\n",
     "        # add tidy long data to compiled data\n",
-    "        compiled_LOIO_wide_data.append(test_cells_wide_data)\n",
-    "\n",
-    "        # DELETE THE REST OF THE LINES IN THIS NOTEBOOK BEFORE FINAL RUN\n",
-    "        score = LOIO_model.score(X_test, y_test)\n",
-    "        print(\n",
-    "            f\"Leaving out image: {image_path}; number of cells: {test_cells.shape[0]}, score: {score}\"\n",
-    "        )\n",
-    "\n",
-    "        count += 1\n",
-    "        if count % 5 == 0:\n",
-    "            break\n"
+    "        compiled_LOIO_wide_data.append(test_cells_wide_data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Format and save LOIO probabilities\n"
    ]
   },
   {
@@ -450,58 +455,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>009a4190-7583-4821-9a17-737f0485d252</td>\n",
-       "      <td>LT0010_27/LT0010_27_173_83.tif</td>\n",
-       "      <td>Elongated</td>\n",
+       "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
+       "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
+       "      <td>Interphase</td>\n",
        "      <td>CP</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.3</td>\n",
        "      <td>ADCCM</td>\n",
-       "      <td>0.000290</td>\n",
+       "      <td>6.642263e-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>009a4190-7583-4821-9a17-737f0485d252</td>\n",
-       "      <td>LT0010_27/LT0010_27_173_83.tif</td>\n",
-       "      <td>Elongated</td>\n",
+       "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
+       "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
+       "      <td>Interphase</td>\n",
        "      <td>CP</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.3</td>\n",
        "      <td>Anaphase</td>\n",
-       "      <td>0.000040</td>\n",
+       "      <td>1.594364e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>009a4190-7583-4821-9a17-737f0485d252</td>\n",
-       "      <td>LT0010_27/LT0010_27_173_83.tif</td>\n",
-       "      <td>Elongated</td>\n",
+       "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
+       "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
+       "      <td>Interphase</td>\n",
        "      <td>CP</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.3</td>\n",
        "      <td>Apoptosis</td>\n",
-       "      <td>0.000022</td>\n",
+       "      <td>8.103707e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>009a4190-7583-4821-9a17-737f0485d252</td>\n",
-       "      <td>LT0010_27/LT0010_27_173_83.tif</td>\n",
-       "      <td>Elongated</td>\n",
+       "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
+       "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
+       "      <td>Interphase</td>\n",
        "      <td>CP</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.3</td>\n",
        "      <td>Binuclear</td>\n",
-       "      <td>0.000015</td>\n",
+       "      <td>2.445957e-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>009a4190-7583-4821-9a17-737f0485d252</td>\n",
-       "      <td>LT0010_27/LT0010_27_173_83.tif</td>\n",
-       "      <td>Elongated</td>\n",
+       "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
+       "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
+       "      <td>Interphase</td>\n",
        "      <td>CP</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.3</td>\n",
        "      <td>Elongated</td>\n",
-       "      <td>0.991291</td>\n",
+       "      <td>1.855022e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -515,106 +520,106 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4450</th>\n",
-       "      <td>fd1e0290-f17d-492e-bd8a-6af449e6b417</td>\n",
-       "      <td>LT0019_06/LT0019_06_140_70.tif</td>\n",
-       "      <td>Apoptosis</td>\n",
+       "      <th>128785</th>\n",
+       "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
+       "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
+       "      <td>Prometaphase</td>\n",
        "      <td>DP</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>MetaphaseAlignment</td>\n",
-       "      <td>0.001394</td>\n",
+       "      <td>2.292677e-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4451</th>\n",
-       "      <td>fd1e0290-f17d-492e-bd8a-6af449e6b417</td>\n",
-       "      <td>LT0019_06/LT0019_06_140_70.tif</td>\n",
-       "      <td>Apoptosis</td>\n",
+       "      <th>128786</th>\n",
+       "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
+       "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
+       "      <td>Prometaphase</td>\n",
        "      <td>DP</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>OutOfFocus</td>\n",
-       "      <td>0.000410</td>\n",
+       "      <td>8.108503e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4452</th>\n",
-       "      <td>fd1e0290-f17d-492e-bd8a-6af449e6b417</td>\n",
-       "      <td>LT0019_06/LT0019_06_140_70.tif</td>\n",
-       "      <td>Apoptosis</td>\n",
+       "      <th>128787</th>\n",
+       "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
+       "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
+       "      <td>Prometaphase</td>\n",
        "      <td>DP</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Polylobed</td>\n",
-       "      <td>0.305711</td>\n",
+       "      <td>7.323084e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4453</th>\n",
-       "      <td>fd1e0290-f17d-492e-bd8a-6af449e6b417</td>\n",
-       "      <td>LT0019_06/LT0019_06_140_70.tif</td>\n",
-       "      <td>Apoptosis</td>\n",
+       "      <th>128788</th>\n",
+       "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
+       "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
+       "      <td>Prometaphase</td>\n",
        "      <td>DP</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Prometaphase</td>\n",
-       "      <td>0.024472</td>\n",
+       "      <td>9.995624e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4454</th>\n",
-       "      <td>fd1e0290-f17d-492e-bd8a-6af449e6b417</td>\n",
-       "      <td>LT0019_06/LT0019_06_140_70.tif</td>\n",
-       "      <td>Apoptosis</td>\n",
+       "      <th>128789</th>\n",
+       "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
+       "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
+       "      <td>Prometaphase</td>\n",
        "      <td>DP</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>SmallIrregular</td>\n",
-       "      <td>0.002615</td>\n",
+       "      <td>3.970684e-08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4455 rows × 8 columns</p>\n",
+       "<p>128790 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 Cell_UUID                    Metadata_DNA  \\\n",
-       "0     009a4190-7583-4821-9a17-737f0485d252  LT0010_27/LT0010_27_173_83.tif   \n",
-       "1     009a4190-7583-4821-9a17-737f0485d252  LT0010_27/LT0010_27_173_83.tif   \n",
-       "2     009a4190-7583-4821-9a17-737f0485d252  LT0010_27/LT0010_27_173_83.tif   \n",
-       "3     009a4190-7583-4821-9a17-737f0485d252  LT0010_27/LT0010_27_173_83.tif   \n",
-       "4     009a4190-7583-4821-9a17-737f0485d252  LT0010_27/LT0010_27_173_83.tif   \n",
-       "...                                    ...                             ...   \n",
-       "4450  fd1e0290-f17d-492e-bd8a-6af449e6b417  LT0019_06/LT0019_06_140_70.tif   \n",
-       "4451  fd1e0290-f17d-492e-bd8a-6af449e6b417  LT0019_06/LT0019_06_140_70.tif   \n",
-       "4452  fd1e0290-f17d-492e-bd8a-6af449e6b417  LT0019_06/LT0019_06_140_70.tif   \n",
-       "4453  fd1e0290-f17d-492e-bd8a-6af449e6b417  LT0019_06/LT0019_06_140_70.tif   \n",
-       "4454  fd1e0290-f17d-492e-bd8a-6af449e6b417  LT0019_06/LT0019_06_140_70.tif   \n",
+       "                                   Cell_UUID                    Metadata_DNA  \\\n",
+       "0       0008551d-e7f6-4351-b680-140c3661cb59  LT0109_38/LT0109_38_381_87.tif   \n",
+       "1       0008551d-e7f6-4351-b680-140c3661cb59  LT0109_38/LT0109_38_381_87.tif   \n",
+       "2       0008551d-e7f6-4351-b680-140c3661cb59  LT0109_38/LT0109_38_381_87.tif   \n",
+       "3       0008551d-e7f6-4351-b680-140c3661cb59  LT0109_38/LT0109_38_381_87.tif   \n",
+       "4       0008551d-e7f6-4351-b680-140c3661cb59  LT0109_38/LT0109_38_381_87.tif   \n",
+       "...                                      ...                             ...   \n",
+       "128785  fffe7b67-9876-4ef0-9848-046506e8f238  LT0035_06/LT0035_06_274_21.tif   \n",
+       "128786  fffe7b67-9876-4ef0-9848-046506e8f238  LT0035_06/LT0035_06_274_21.tif   \n",
+       "128787  fffe7b67-9876-4ef0-9848-046506e8f238  LT0035_06/LT0035_06_274_21.tif   \n",
+       "128788  fffe7b67-9876-4ef0-9848-046506e8f238  LT0035_06/LT0035_06_274_21.tif   \n",
+       "128789  fffe7b67-9876-4ef0-9848-046506e8f238  LT0035_06/LT0035_06_274_21.tif   \n",
        "\n",
-       "     Mitocheck_Phenotypic_Class Model_Feature_Type  Model_C  Model_l1_ratio  \\\n",
-       "0                     Elongated                 CP      1.0             0.3   \n",
-       "1                     Elongated                 CP      1.0             0.3   \n",
-       "2                     Elongated                 CP      1.0             0.3   \n",
-       "3                     Elongated                 CP      1.0             0.3   \n",
-       "4                     Elongated                 CP      1.0             0.3   \n",
-       "...                         ...                ...      ...             ...   \n",
-       "4450                  Apoptosis                 DP      1.0             1.0   \n",
-       "4451                  Apoptosis                 DP      1.0             1.0   \n",
-       "4452                  Apoptosis                 DP      1.0             1.0   \n",
-       "4453                  Apoptosis                 DP      1.0             1.0   \n",
-       "4454                  Apoptosis                 DP      1.0             1.0   \n",
+       "       Mitocheck_Phenotypic_Class Model_Feature_Type  Model_C  Model_l1_ratio  \\\n",
+       "0                      Interphase                 CP      1.0             0.3   \n",
+       "1                      Interphase                 CP      1.0             0.3   \n",
+       "2                      Interphase                 CP      1.0             0.3   \n",
+       "3                      Interphase                 CP      1.0             0.3   \n",
+       "4                      Interphase                 CP      1.0             0.3   \n",
+       "...                           ...                ...      ...             ...   \n",
+       "128785               Prometaphase                 DP      1.0             1.0   \n",
+       "128786               Prometaphase                 DP      1.0             1.0   \n",
+       "128787               Prometaphase                 DP      1.0             1.0   \n",
+       "128788               Prometaphase                 DP      1.0             1.0   \n",
+       "128789               Prometaphase                 DP      1.0             1.0   \n",
        "\n",
-       "     Model_Phenotypic_Class  Predicted_Probability  \n",
-       "0                     ADCCM               0.000290  \n",
-       "1                  Anaphase               0.000040  \n",
-       "2                 Apoptosis               0.000022  \n",
-       "3                 Binuclear               0.000015  \n",
-       "4                 Elongated               0.991291  \n",
-       "...                     ...                    ...  \n",
-       "4450     MetaphaseAlignment               0.001394  \n",
-       "4451             OutOfFocus               0.000410  \n",
-       "4452              Polylobed               0.305711  \n",
-       "4453           Prometaphase               0.024472  \n",
-       "4454         SmallIrregular               0.002615  \n",
+       "       Model_Phenotypic_Class  Predicted_Probability  \n",
+       "0                       ADCCM           6.642263e-06  \n",
+       "1                    Anaphase           1.594364e-01  \n",
+       "2                   Apoptosis           8.103707e-01  \n",
+       "3                   Binuclear           2.445957e-13  \n",
+       "4                   Elongated           1.855022e-07  \n",
+       "...                       ...                    ...  \n",
+       "128785     MetaphaseAlignment           2.292677e-04  \n",
+       "128786             OutOfFocus           8.108503e-07  \n",
+       "128787              Polylobed           7.323084e-07  \n",
+       "128788           Prometaphase           9.995624e-01  \n",
+       "128789         SmallIrregular           3.970684e-08  \n",
        "\n",
-       "[4455 rows x 8 columns]"
+       "[128790 rows x 8 columns]"
       ]
      },
      "execution_count": 5,
