rename files, fix sh

--- a/2.train_model/train_single_class_models.ipynb
+++ b/2.train_model/train_single_class_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "[2432 rows x 1458 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,10 +450,6 @@
    "source": [
     "# set numpy seed to make random operations reproduceable\n",
     "np.random.seed(0)\n",
-    "\n",
-    "# create results directory\n",
-    "results_dir = pathlib.Path(\"models/multi_class_models/\")\n",
-    "results_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# load training data from indexes and features dataframe\n",
     "data_split_path = pathlib.Path(f\"../1.split_data/indexes/data_split_indexes.tsv\")\n",
@@ -470,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -483,19 +479,78 @@
       "X has shape (2432, 165), y has shape (2432,)\n",
       "Best parameters: {'C': 1.0, 'l1_ratio': 0.1}\n",
       "Score of best estimator: 0.9614626100286326\n",
+      "\n",
+      "Training final model on CP features for Prometaphase phenotypic class with 293 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.8}\n",
+      "Score of best estimator: 0.8980763953453927\n",
+      "\n",
+      "Training final model on CP features for Grape phenotypic class with 63 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.30000000000000004}\n",
+      "Score of best estimator: 0.9613173528381053\n",
+      "\n",
+      "Training final model on CP features for Interphase phenotypic class with 357 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.933355168340468\n",
+      "\n",
+      "Training final model on CP features for Apoptosis phenotypic class with 232 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.30000000000000004}\n",
+      "Score of best estimator: 0.9238803783192336\n",
+      "\n",
+      "Training final model on CP features for ADCCM phenotypic class with 81 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.9503253790617394\n",
+      "\n",
+      "Training final model on CP features for SmallIrregular phenotypic class with 139 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.9151094548730196\n",
+      "\n",
+      "Training final model on CP features for Polylobed phenotypic class with 312 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9122076213162915\n",
+      "\n",
+      "Training final model on CP features for Metaphase phenotypic class with 63 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.9613173528381053\n",
+      "\n",
+      "Training final model on CP features for Binuclear phenotypic class with 156 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9253441155538903\n",
+      "\n",
+      "Training final model on CP features for Hole phenotypic class with 97 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.8}\n",
+      "Score of best estimator: 0.9555980422433723\n",
+      "\n",
+      "Training final model on CP features for Anaphase phenotypic class with 71 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.9}\n",
+      "Score of best estimator: 0.959019787125699\n",
+      "\n",
+      "Training final model on CP features for MetaphaseAlignment phenotypic class with 149 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.5}\n",
+      "Score of best estimator: 0.9135035856303322\n",
+      "\n",
+      "Training final model on CP features for Elongated phenotypic class with 94 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9731411121459244\n",
+      "\n",
+      "Training final model on CP features for OutOfFocus phenotypic class with 258 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.5}\n",
+      "Score of best estimator: 0.9739046905889831\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array(['Not Large', 'Not Large', 'Not Large', ..., 'Not Large',\n",
-       "       'Not Large', 'Not Large'], dtype=object)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -528,6 +583,10 @@
     "for model_type in model_types:\n",
     "    for feature_type in feature_types:\n",
     "        for phenotypic_class in training_data[\"Mitocheck_Phenotypic_Class\"].unique():\n",
+    "            # create results directory\n",
+    "            results_dir = pathlib.Path(f\"models/single_class_models/{phenotypic_class}_models/\")\n",
+    "            results_dir.mkdir(parents=True, exist_ok=True)\n",
+    "            \n",
     "            # get number of labels for this specific phenotypic_class\n",
     "            phenotypic_class_counts = (\n",
     "                training_data.loc[\n",
@@ -568,9 +627,13 @@
     "            print(f\"Best parameters: {grid_search_cv.best_params_}\")\n",
     "            print(f\"Score of best estimator: {grid_search_cv.best_score_}\\n\")\n",
     "            \n",
-    "            \n",
+    "            # save final estimator\n",
+    "            dump(\n",
+    "                grid_search_cv.best_estimator_,\n",
+    "                f\"{results_dir}/{model_type}__{feature_type}.joblib\",\n",
+    "            )\n",
     "            #break\n",
-    "        break\n",
+    "        #break\n",
     "    break"
    ]
   }
