single class models notebook

--- a/2.train_model/train_single_class_models.ipynb
+++ b/2.train_model/train_single_class_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "[2432 rows x 1458 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -549,6 +549,96 @@
       "X has shape (2432, 165), y has shape (2432,)\n",
       "Best parameters: {'C': 1.0, 'l1_ratio': 0.5}\n",
       "Score of best estimator: 0.9739046905889831\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for Large phenotypic class with 67 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9588706832504009\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for Prometaphase phenotypic class with 293 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.8231496401467169\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for Grape phenotypic class with 63 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9613173528381053\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for Interphase phenotypic class with 357 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.7856265053149603\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for Apoptosis phenotypic class with 232 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.8593010568073594\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for ADCCM phenotypic class with 81 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9503253790617394\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for SmallIrregular phenotypic class with 139 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9151094548730196\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for Polylobed phenotypic class with 312 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.8119663394939016\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for Metaphase phenotypic class with 63 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9613173528381053\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for Binuclear phenotypic class with 156 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.1}\n",
+      "Score of best estimator: 0.9048484144312839\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for Hole phenotypic class with 97 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9405807512379143\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for Anaphase phenotypic class with 71 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9564273741398406\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for MetaphaseAlignment phenotypic class with 149 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9090690392743742\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for Elongated phenotypic class with 94 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.9424077433904706\n",
+      "\n",
+      "Training shuffled_baseline model on CP features for OutOfFocus phenotypic class with 258 positive labels...\n",
+      "X has shape (2432, 165), y has shape (2432,)\n",
+      "Shuffled!\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.8438441657959348\n",
       "\n"
      ]
     }
@@ -612,6 +702,7 @@
     "            if model_type == \"shuffled_baseline\":\n",
     "                for column in X.T:\n",
     "                    np.random.shuffle(column)\n",
+    "                print(\"Shuffled!\")\n",
     "                    \n",
     "            # fit grid search cv to X and y data\n",
     "            # capture convergence warning from sklearn\n",
@@ -633,8 +724,8 @@
     "                f\"{results_dir}/{model_type}__{feature_type}.joblib\",\n",
     "            )\n",
     "            #break\n",
-    "        #break\n",
-    "    break"
+    "        break\n",
+    "    #break"
    ]
   }
  ],
