--- a/2.train_model/train_single_class_models.ipynb
+++ b/2.train_model/train_single_class_models.ipynb
@@ -719,10 +719,10 @@
     "            print(f\"Score of best estimator: {grid_search_cv.best_score_}\\n\")\n",
     "            \n",
     "            # save final estimator\n",
-    "            dump(\n",
-    "                grid_search_cv.best_estimator_,\n",
-    "                f\"{results_dir}/{model_type}__{feature_type}.joblib\",\n",
-    "            )\n",
+    "            # dump(\n",
+    "            #     grid_search_cv.best_estimator_,\n",
+    "            #     f\"{results_dir}/{model_type}__{feature_type}.joblib\",\n",
+    "            # )\n",
     "            #break\n",
     "        break\n",
     "    #break"
